--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
 </head>
 
 <body>
-
-    <!-- <div id="preloader"></div> -->
-
-
     <header id="home">
         <div id="menuContainer">
-            <img class="logo" src="./img/logoTopo.png" alt="Logo">
+            <img class="logoMobile" src="./img/logoTopo.png" alt="Logo">
             <div id="menu">
                 <div id="menuBar" onclick="menuOnClick()">
                     <div id="bar1" class="bar"></div>
@@ -48,7 +44,7 @@
         <nav>
             <div id="menu2" class="menu">
                 <div class="logo">
-                        <img class="logo" src="./img/logoTopo.png" alt="AlQuimia">
+                    <img class="logo" src="./img/logoTopo.png" alt="AlQuimia">
                 </div>
                 <!-- Lista de navegação -->
                 <ul class="navBar">
@@ -338,15 +334,15 @@
 
             <div id="carousel" class="carousel">
                 <div class="card">
-                    <h3>Ana</h3>
-                    <p>A felicidade está nas pequenas coisas. Um sorriso, um gesto, um momento.</p>
-                    <img src="./img/portifólio/portAlQuimia.png" alt="Topo do site ">
+                    <h3>Patinhas Mágicas</h3>
+                    <p>Patinhas Mágicas é um site desenvolvido para petshop.</p>
+                    <img src="./img/portifólio/patinhas.png" alt="Topo do site ">
                     <!-- <a href="#">Saiba mais</a> -->
                 </div>
                 <div class="card">
-                    <h3>Clayton</h3>
-                    <p>A felicidade está nas pequenas coisas. Um sorriso, um gesto, um momento.</p>
-                    <img src="./img/portifólio/portAlQuimia.png" alt="Topo do site">
+                    <h3>CineBox</h3>
+                    <p>CineBox é um site desenvolvido para streaming.</p>
+                    <img src="./img/portifólio/cinexbox.png" alt="Topo do site">
                     <!-- <a href="#">Saiba mais</a> -->
                 </div>
                 <div class="card">
